--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>BravtaCode</title>
     <link rel="shortcut icon" href="" type="image/x-icon">
    
-    <link rel="stylesheet" href="./Bravta/BravtaDevelopers.css">
-    <link href="./Bravta/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./Bravta/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="Bravta/BravtaDevelopers.css">
+    <link href="Bravta/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Bravta/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -373,10 +373,12 @@
 
 
  
-    <script src="../stylesheets/Bravta/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="Bravta/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
-    <script src="../scripts/emailJs-form/validate.js"></script>
+    <script src="Bravta/emailJs-form/validate.js"></script>
+    
+
 </body>
 
 </html>
