--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="row gy-4">
                     <div class="col-xl-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
-                            <img src="https://github.com/Myxic/BravtaDevs/blob/main/Shadow.jpg?raw=true"
+                            <img src="https://res.cloudinary.com/dfk4z2ch2/image/upload/v1715764746/BravtaDevs/wiuyc4pia2ca4g7xlsgy.jpg"
                                 class="img-fluid" alt="">
                             <h4>Ihediwa Miracle E </h4>
                             <span>Team Lead</span>
@@ -100,7 +100,7 @@
                     </div><!-- End Team Member -->
                     <div class="col-xl-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
-                            <img src="https://github.com/Myxic/BravtaDevs/blob/main/BigBen.jpg?raw=true"
+                            <img src="https://res.cloudinary.com/dfk4z2ch2/image/upload/v1715764738/BravtaDevs/nb3dxsepgizdhkbeldzd.jpg"
                                 class="img-fluid" alt="">
                             <h4>Benedict Ezemenahi C.</h4>
                             <span>Team Member</span>
@@ -124,7 +124,7 @@
 
                     <div class="col-xl-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
-                            <img src="https://github.com/Myxic/BravtaDevs/blob/main/Ipe.jpg?raw=true" class="img-fluid"
+                            <img src="https://res.cloudinary.com/dfk4z2ch2/image/upload/v1715764746/BravtaDevs/dsgevjzmkq50cfzjdeju.jpg" class="img-fluid"
                                 alt="">
                             <h4>Osegbo Chukwuemeka E.</h4>
                             <span>Team Member</span>
@@ -145,7 +145,7 @@
 
                     <div class="col-xl-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
-                            <img src="https://github.com/Myxic/BravtaDevs/blob/main/Ikenna.jpg?raw=true"
+                            <img src="https://res.cloudinary.com/dfk4z2ch2/image/upload/v1715764747/BravtaDevs/s9d5drvuoqw9ty6lzy8f.jpg"
                                 class="img-fluid" alt="">
                             <h4>Ikenna Richard</h4>
                             <span>Team Member</span>
@@ -170,7 +170,7 @@
 
                     <div class="col-xl-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
-                            <img src="https://github.com/Myxic/BravtaDevs/blob/main/Kosi.jpg?raw=true"
+                            <img src="https://res.cloudinary.com/dfk4z2ch2/image/upload/v1702983302/BravtaDevs/gdcwxd8vzgzrcyjhljob.jpg"
                                 class="img-fluid" alt="">
                             <h4>Kosisochukwu Anowi</h4>
                             <span>Team Member</span>
